fix google map blank at the end on mobile

--- a/assets/index.css
+++ b/assets/index.css
@@ -392,6 +392,10 @@ main button {
         height: 90vh;
     }
 
+    #home-main4 iframe{
+        height: 100%;
+    }
+
     #home-main5 > .flex-row {
         flex-direction: column;
         justify-content: flex-end;
